--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
   <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
-  <a href="./subscription.html" onclick="w3_close()" class="w3-bar-item w3-button">My Subscription</a>
+  <a href="./subscription.html" onclick="w3_close()" class="w3-bar-item w3-button">My Subscriptions</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
 </nav>
 
