--- a/subscription2.html
+++ b/subscription2.html
@@ -82,7 +82,7 @@ function w3_close() {
   window.onload = () => { buildEmbeddedExperience() };
   document.getElementById('re_cancel_acc_btn').onclick = function () {
     // offboard_url = `https://app.bellwethr.com/offboard/experience/bellwethr-8286110113?subscription_id=${Math.floor(Math.random() * 1000000000) + 1}`;
-    offboard_url = `https://dbec-2c0f-eb68-219-1a00-81f9-28e9-220-da.ngrok.io?subscription_id=171361680&is_embedded=true`;
+    offboard_url = `https://dbec-2c0f-eb68-219-1a00-81f9-28e9-220-da.ngrok.io/offboard/experience/friday-8600908459bb?subscription_id=171361680&is_embedded=true`;
     openReModal(offboard_url);
   }
 </script>
